@@ -1803,12 +1803,11 @@ class CTrigger extends CTriggerGeneral {
 	protected function applyQuerySortOptions($tableName, $tableAlias, array $options, array $sqlParts) {
 		$sqlParts = parent::applyQuerySortOptions($tableName, $tableAlias, $options, $sqlParts);
 
-		if (!zbx_empty($options['sortfield'])) {
-			// if the parent method call adds a hostname column to the select clause, replace it with "h.name"
-			// since column "t.hostname" doesn't exist
-			if (isset($sqlParts['select']['hostname'])) {
-				$sqlParts['select']['hostname'] = 'h.name as hostname';
-			}
+		// if the parent method call adds a hostname column to the select clause, replace it with "h.name"
+		// since column "t.hostname" doesn't exist
+		if (!zbx_empty($options['sortfield'])
+				&& ($options['sortfield'] === 'hostname' || isset($sqlParts['select']['hostname']))) {
+			$sqlParts['select']['hostname'] = 'h.name as hostname';
 		}
 
 		return $sqlParts;
